--- a/style.css
+++ b/style.css
@@ -4,18 +4,18 @@
     min-height: 0;
     font-family: "iosevka nerd font";
     font-weight: 500;
-    font-size: 14px;
+    font-size: 16px;
     padding: 0;
 }
 
 window#waybar {
-    background: #1d2021;
-    border: 2px solid #3c3836;
+    background: #212529;
+    border: 2px solid #343a40;
 }
 
 tooltip {
-    background-color: #1d2021;
-    border: 2px solid #7c6f64;
+    background-color: #212529;
+    border: 2px solid #343a40;
 }
 
 #clock,
@@ -30,9 +30,9 @@ tooltip {
 }
 
 #workspaces {
-    background-color: #303536;
+    background-color: #495057;
     margin: 6px 0px 6px 6px;
-    border: 2px solid #434a4c;
+    border: 2px solid #6c757d;
 }
 
 #workspaces button {
@@ -40,7 +40,7 @@ tooltip {
     min-width: 0;
     box-shadow: inset 0 -3px transparent;
     padding: 2px 4px;
-    color: #c7ab7a;
+    color: #f8f9fa;
 }
 
 #workspaces button.focused {
@@ -52,36 +52,36 @@ tooltip {
 }
 
 #clock {
-    background-color: #303536;
-    border: 2px solid #434a4c;
-    color: #d4be98;
+    background-color: #495057;
+    border: 2px solid #6c757d;
+    color: #f8f9fa;
 }
 
 #tray {
-    background-color: #d4be98;
-    border: 2px solid #c7ab7a;
+    background-color: #495057;
+    border: 2px solid #6c757d;
 }
 
 #battery {
-    background-color: #a9b665;
-    border: 2px solid #c7ab7a;
-    color: #6c782e;
+    background-color: #495057;
+    border: 2px solid #6c757d;
+    color: #f8f9fa;
 }
 
 #cpu,
 #memory,
 #network,
 #pulseaudio {
-    background-color: #ddc7a1;
-    border: 2px solid #c7ab7a;
-    color: #1d2021;
+    background-color: #495057;
+    border: 2px solid #6c757d;
+    color: #f8f9fa;
 }
 
 #cpu.critical,
 #memory.critical {
     background-color: #ddc7a1;
-    border: 2px solid #c7ab7a;
-    color: #c14a4a;
+    border: 2px solid #6c757d;
+    color: #f8f9fa;
 }
 
 #battery.warning,
