--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 }
 
 window#waybar {
-    background: #212529;
-    border: 2px solid #343a40;
+    background: transparent; /*#212529;
+    border: 2px solid #343a40;*/
 }
 
 tooltip {
