added a bluetooth module and added on-click for both wifi and bluetooth

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ tooltip {
 #memory,
 #battery,
 #network,
+#bluetooth,
 #backlight,
 #pulseaudio {
     margin: 6px 6px 6px 0px;
@@ -70,6 +71,7 @@ tooltip {
 #memory,
 #battery,
 #network,
+#bluetooth,
 #backlight,
 #pulseaudio {
     background-color: #495057;
