--- a/style.css
+++ b/style.css
@@ -4,18 +4,18 @@
     min-height: 0;
     font-family: "iosevka nerd font";
     font-weight: 500;
-    font-size: 14px;
+    font-size: 16px;
     padding: 0;
 }
 
 window#waybar {
-    background: transparent; /*#212529;
-    border: 2px solid #343a40;*/
+  background: transparent;
 }
 
 tooltip {
     background-color: #212529;
     border: 2px solid #343a40;
+    border-radius: 3px;
 }
 
 #clock,
@@ -47,7 +47,10 @@ tooltip {
 }
 
 #workspaces button.focused {
-    color: #ddc7a1;
+    background-color: #ffffff;
+    color: #000000;
+    border-radius: 3px;
+    border: 2px solid #6c757d;
 }
 
 #workspaces button.urgent {
@@ -96,3 +99,4 @@ tooltip {
     border-radius: 3px;
     color: #c14a4a;
 }
+
