--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ tooltip {
 #battery,
 #network,
 #bluetooth,
+#custom-kbd_backlight,
 #backlight,
 #pulseaudio {
     margin: 6px 6px 6px 0px;
@@ -76,6 +77,7 @@ tooltip {
 #network,
 #bluetooth,
 #backlight,
+#custom-kbd_backlight,
 #pulseaudio {
     background-color: #495057;
     border: 2px solid #6c757d;
